<resources>
    <string name="app_name">Actors</string>
    <string name="no_connection_error">Oops… Make sure you are connected</string>
    <string name="request_error">Oops… This is embarrassing</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="order_by_name">Order by name</string>
    <string name="order_by_popularity">Order by popularity</string>
    <string name="filmography_title">Filmography</string>
    <string name="vote_count_literal">votes</string>
    <string name="search_literal">Search</string>
    <string name="search_name_label">name</string>
    <string name="search_location_label">location</string>
    <string name="search_top_label">is top?</string>
    <string name="search_top_yes">yes</string>
    <string name="search_top_no">no</string>
    <string name="search_popularity_label">popularity</string>
    <string name="search_popularity_min">0</string>
    <string name="search_popularity_max">100</string>

    <string-array name="locations_array">
        <item>Barcelona</item>
        <item>London</item>
        <item>Paris</item>
        <item>New York</item>
        <item>Dallas</item>
        <item>Dublin</item>
        <item>Helsinki</item>
        <item>Berlin</item>
        <item>San Francisco</item>
        <item>Sydney</item>
        <item>Vancouver</item>
        <item>Rome</item>
        <item>Chicago</item>
        <item>Boston</item>
        <item>Los Angeles</item>
    </string-array>
</resources>
