<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/search_window_margin_left"
    android:background="@drawable/bg_details"
    android:padding="@dimen/fragment_padding"
    android:clipToPadding="false">

    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/details_padding"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/search_header_padding_bottom">

                <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingTop="2dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_search_green"/>

                <TextView
                    android:id="@+id/search_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/search_icon"
                    android:textColor="@color/aqua_details"
                    android:text="@string/search_literal"/>

                <ImageView
                    android:id="@+id/close_button"
                    android:layout_width="@dimen/search_close_button_size"
                    android:layout_height="@dimen/search_close_button_size"
                    android:layout_alignParentRight="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_close"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/search_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_name_label"
                android:layout_marginBottom="@dimen/details_padding"/>

            <EditText
                android:id="@+id/search_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/details_padding"/>

            <TextView
                android:id="@+id/search_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_location_label"/>

            <Spinner
                android:id="@+id/search_location_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/details_padding"/>

            <TextView
                android:id="@+id/search_top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_top_label"
                android:layout_marginBottom="@dimen/details_padding"/>

            <RadioGroup
                android:id="@+id/search_top_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/details_padding">

                <RadioButton
                    android:id="@+id/radio_yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_top_yes"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radio_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_top_no"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <TextView
                android:id="@+id/search_popularity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_popularity_label"
                android:layout_marginBottom="@dimen/details_padding"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/details_padding"
                android:paddingBottom="@dimen/search_button_height">

                <SeekBar
                    android:id="@+id/search_popularity_seek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"/>

                <TextView
                    android:id="@+id/seek_init_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/search_popularity_seek"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="12dp"
                    android:text="@string/search_popularity_min"/>

                <TextView
                    android:id="@+id/seek_end_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/search_popularity_seek"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    android:text="@string/search_popularity_max"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_button_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_search_button"
        android:text="@string/search_literal"
        android:textColor="@android:color/white"/>
</RelativeLayout>
